--- a/IBM_Capstone_Week3_1.ipynb
+++ b/IBM_Capstone_Week3_1.ipynb
@@ -373,12 +373,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fd4cc532-04c1-4908-80a3-3f9792e007d0"
+        "outputId": "c23320c3-9ebd-4c26-e195-9fe80e7e3d1b"
       },
       "source": [
+        "# Dataframe shape\n",
         "df.shape"
       ],
-      "execution_count": 16,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -390,9 +391,166 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 19
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vzaSMEHKu2Q4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 421
+        },
+        "outputId": "4b4ea068-6bb1-41b1-db2c-7c2d5e5ba4e4"
+      },
+      "source": [
+        "# List of data\n",
+        "df.head(12)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>postcode</th>\n",
+              "      <th>borough</th>\n",
+              "      <th>neighborhood</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>M3A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Parkwoods</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>M4A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Victoria Village</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>M5A</td>\n",
+              "      <td>Downtown Toronto</td>\n",
+              "      <td>Regent Park, Harbourforont</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>M6A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Lawrence Heights</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>M6A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Lawrence Manor</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>M7A</td>\n",
+              "      <td>Downtown Toronto</td>\n",
+              "      <td>Queen's Park</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>M9A</td>\n",
+              "      <td>Etobicoke</td>\n",
+              "      <td>Islington Avenue</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>M1B</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Rouge</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>M1B</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Malvern</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>M3B</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Don Mills North</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>M4B</td>\n",
+              "      <td>East York</td>\n",
+              "      <td>Woodbine Gardens</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>M4B</td>\n",
+              "      <td>East York</td>\n",
+              "      <td>Parkview Hill</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   postcode           borough                neighborhood\n",
+              "2       M3A        North York                   Parkwoods\n",
+              "3       M4A        North York            Victoria Village\n",
+              "4       M5A  Downtown Toronto  Regent Park, Harbourforont\n",
+              "5       M6A        North York            Lawrence Heights\n",
+              "6       M6A        North York              Lawrence Manor\n",
+              "7       M7A  Downtown Toronto                Queen's Park\n",
+              "9       M9A         Etobicoke            Islington Avenue\n",
+              "10      M1B       Scarborough                       Rouge\n",
+              "11      M1B       Scarborough                     Malvern\n",
+              "13      M3B        North York             Don Mills North\n",
+              "14      M4B         East York            Woodbine Gardens\n",
+              "15      M4B         East York               Parkview Hill"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dZ8YeLuTvDmT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
